Fix extra margin above navbar when the page's width is smaller (fix #1)

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -15,6 +15,11 @@
 // Bootstrap itself
 @import "bootstrap"
 
+// We need to set the body's top padding here so that the responsive styles can
+// override it
+body
+  padding-top: 75px
+
 // Responsive styles
 @import "bootstrap-responsive"
 
