--- a/app/assets/stylesheets/locations.css.sass
+++ b/app/assets/stylesheets/locations.css.sass
@@ -3,7 +3,6 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 body
-  padding-top: 75px
   background-color: rgb(221, 228, 230)
 
 footer
